# QPEP-RANSAC

./: README.md
RansacLib/: ransac.h
src/: CMakeLists.txt  calibrated_absolute_pose_estimator_QPEP.cc  calibrated_absolute_pose_estimator_QPEP.h  camera_pose_estimation_QPEP.cc
